# Fog-Detection-Using-Machine-Learning-Methods

./: .gitignore  Makefile  README.md  cnn_model.ipynb  cnn_model_combined_dataset.ipynb  cnn_model_combined_dataset_results.ipynb  cnn_model_eval.ipynb  cnn_model_grayscale.ipynb  cnn_model_no_pretrained.ipynb  dataset-combined-fog.ipynb  dataset-fog-or-smog-detection-dataset.ipynb  dataset-fog-prediction.ipynb  dataset-fog_dataset.ipynb  dataset-knmi-station-data-regression.ipynb  dataset-knmi-station-data.ipynb  dvc.yaml  fog-or-smog-detection-dataset.ipynb  foggy-cityscapes-image-dataset.ipynb  lstm_model_color.ipynb  lstm_model_grayscale.ipynb  main.py  not-deep-models-idea-1.ipynb  pyproject.toml  run_lstm_idea.ipynb  wunderground.ipynb
colab/: dataset-knmi-station-data-classification-binary.ipynb  dataset-knmi-station-data-classification-simplified.ipynb  dataset-knmi-station-data-classification-simplified_v2.ipynb  dataset-knmi-station-data-classification.ipynb  dataset-knmi-station-data-regression-v2-session2.ipynb  dataset-knmi-station-data-regression-v2-session3.ipynb  dataset-knmi-station-data-regression-v2-session4.ipynb  dataset-knmi-station-data-regression-v2.ipynb  dataset-knmi-station-data-regression.ipynb  dataset-knmi-station-data-regression_session2.ipynb  dataset-knmi-station-data-regression_session3.ipynb  prepare_dataset.ipynb  run_standard_model_color.ipynb  run_standard_model_color_ds.ipynb  run_standard_model_grayscale.ipynb
edas/: fog-detection.ipynb  fog-or-smog.ipynb  foggy-cityscapes.ipynb
src/: model_wrapper.py  prepare_dataset.py
(+24 files in other folders)
