[project]
name = "magisterka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.59.1",
    "lightning>=2.5.1",
    "prettytable>=3.16.0",
    "pypots>=0.18",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchmetrics>=1.7.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.86",
    "xgboost>=3.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.workspace]
members = ["datasets/the-weather-scraper"]

[dependency-groups]
dev = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "ruff>=0.9.10",
]
